--- a/web/src/chat/chat-page.html
+++ b/web/src/chat/chat-page.html
@@ -140,7 +140,7 @@
       height: 100%;
     }
 
-    .chat-room-list {
+    :host .chat-room-list {
       max-width: 15%;
       overflow-y: auto;
     }
