--- a/web/src/interview/order-question.html
+++ b/web/src/interview/order-question.html
@@ -245,6 +245,6 @@
     <div id="rulesHeader">
       To help you out, here are the rules:
     </div>
-    <ghvz-rules game="[[game]]"></ghvz-rules>
+    <ghvz-collapsible-list game="[[game]]"></ghvz-collapsible-list>
   </template>
 </dom-module>
