--- a/web/src/missions/mission.html
+++ b/web/src/missions/mission.html
@@ -72,7 +72,7 @@
     }
   </style>
   <template>
-    <div id="name">[[mission.name]]</div>
+    <div id="name" slot="headerText">[[mission.name]]</div>
 
     <!-- for webdrivers -->
     <div style="height: 1px" name$="mission-[[mission.name]]"></div>
