--- a/web/src/profile/dialog-change-allegiance.html
+++ b/web/src/profile/dialog-change-allegiance.html
@@ -75,7 +75,6 @@
       padding-top: 0;
     }
 
-
     .button-container {
       display: flex;
       align-items: flex-end;
@@ -88,7 +87,7 @@
       color: var(--admin_color_text_on_primary_background);
     }
 
-    #title {
+    :host #title {
       margin-top: 0;
       color: var(--admin_color_text_on_primary_background);
       background-color: var(--admin_color_primary);
@@ -97,7 +96,7 @@
       font-weight: bold;
     }
 
-    .contents {
+    :host .contents {
       flex-grow: 1;
       margin-top: 0px;
       padding-top: 16px;
