--- a/web/src/chat/chat-room.html
+++ b/web/src/chat/chat-room.html
@@ -29,6 +29,7 @@
           currentPlayer: Object,
           chatRoomId: String,
           isAdmin: Boolean,
+          group: Object,
 
           isAttached: {
             type: Boolean,
@@ -102,6 +103,7 @@
         onChatRoomIdChange_(chatRoomId) {
           assert(chatRoomId)
           this.showLoadingSpinner = true;
+          this.hideChatInfo();
           let self = this;
           let playerUpdatedCallback = function (player) {
             self.set("playerData." + player.id, player);
@@ -125,7 +127,6 @@
           this.bridge.listenToChatRoom(this.game.id, chatRoomId, chatUpdatedCallback);
 
           this.bridge.listenToChatRoomMessages(this.game.id, chatRoomId, chatMessagesUpdatedCallback);
-          this.hideChatInfo();
           this.pendingLastSeenTime = null;
         },
 
@@ -395,16 +396,25 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
+      /* this will hide the scrollbar in mozilla */
+      overflow: -moz-scrollbars-none;
+      /* this will hide the scrollbar in internet explorer */
+      -ms-overflow-style: none;
     }
 
     :host[small] {
       height: 400px;
     }
 
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    :host ::-webkit-scrollbar {
+      width: 0 !important;
+      display: none;
+    }
+
     .conversation-container {
       flex-grow: 1;
       overflow-y: scroll;
-      padding: 8px;
       position: relative;
     }
 
@@ -440,7 +450,7 @@
     .player-name {
       padding-top: 8px;
       font-size: 10px;
-      opacity: .6;
+      color: var(--grey800);
     }
 
     .message-from-me .player-name {
@@ -732,7 +742,7 @@
   </paper-drawer-panel>
 
   <ghvz-chat-info-actions id="actions" bridge="[[bridge]]" game="[[game]]" player-id="[[currentPlayer.id]]"
-    is-admin="[[isAdmin]]" chat-room="[[chatRoom]]">
+    is-admin="[[isAdmin]]" chat-room="[[chatRoom]]" group="[[group]]">
   </ghvz-chat-info-actions>
   </template>
 </dom-module>
