--- a/web/src/drawer/drawer-chat-item.html
+++ b/web/src/drawer/drawer-chat-item.html
@@ -92,24 +92,6 @@
       position: relative;
     }
 
-    .drawer-item {
-      display: flex;
-      align-items: center;
-      opacity: .6;
-      padding-left: 4px;
-      height: 40px;
-      font-size: 14px;
-      font-weight: 500;
-      cursor: pointer;
-      color: black;
-      text-decoration: none;
-
-      --ghvz-chat-room-name-label-icon: {
-        margin: 8px;
-        opacity: .8;
-      }
-    }
-
     .unseenIcon {
       position: absolute;
       width: 8px;
@@ -129,9 +111,9 @@
       background-color: #e7e7e7;
     }
 
-    .drawer-item iron-icon {
+    :host .drawer-item iron-icon {
       margin: 8px;
-      opacity: .8;
+      color: var(--grey700);
     }
   </style>
   <template>
@@ -140,7 +122,7 @@
         <div name="unseenIcon" class="unseenIcon"></div>
       </template>
       <ghvz-drawer-item text="[[chatRoom.name]]" path="[[computePath_(openInAdminChats, chatRoom.id)]]"
-        chat-room-id="[[chatRoomMembership.chatRoomId]]" icon="communication:chat">
+        chat-room-id="[[chatRoomMembership.chatRoomId]]" icon="chat">
       </ghvz-drawer-item>
     </div>
   </template>
