--- a/web/src/notifications/notifications.html
+++ b/web/src/notifications/notifications.html
@@ -15,160 +15,160 @@
 -->
 
 <dom-module id="ghvz-notifications">
-<script>
-  // Not sure why this HTMLImports.whenReady is really needed.
-  // Something about polymer initialization order.
-  // I think we're not supposed to need this.
-  HTMLImports.whenReady(() => {
-    Polymer({
-      is: 'ghvz-notifications',
+  <script>
+    // Not sure why this HTMLImports.whenReady is really needed.
+    // Something about polymer initialization order.
+    // I think we're not supposed to need this.
+    HTMLImports.whenReady(() => {
+      Polymer({
+        is: 'ghvz-notifications',
 
-      properties: {
-        bridge: Object,
+        properties: {
+          bridge: Object,
 
-        game: Object,
-      },
+          game: Object,
+        },
 
-      attached: function() {
-        this.fire('ghvz-add-toolbar-button', { button: this.$.add });
-      },
+        attached: function () {
+          this.fire('ghvz-add-toolbar-button', { button: this.$.add });
+        },
 
-      makeTableBlueprint_: function() {
-        return {
-          itemsRepeater: this.$.repeater,
-          columns: [
-            {
-              property: "previewMessage",
-              name: "Preview Message",
-            },
-            {
-              property: "sendTime",
-              name: "Send Time",
-            },
-            {
-              property: "allegianceFilter",
-              name: "To",
-            },
-            {
-              name: "How",
-              getModel: (category) => {
-                let how = [];
-                category.email && how.push('email');
-                category.site && how.push('site');
-                category.mobile && how.push('mobile');
-                category.sound && how.push('sound');
-                category.vibrate && how.push('vibrate');
-                return how.join('+');
+        makeTableBlueprint_: function () {
+          return {
+            itemsRepeater: this.$.repeater,
+            columns: [
+              {
+                property: "previewMessage",
+                name: "Preview Message",
               },
-            },
-          ],
-          actions: [
-            {
-              name: "Edit",
-              handler: this.startEditingCategory_.bind(this),
-            },
-          ],
-        };
-      },
+              {
+                property: "sendTime",
+                name: "Send Time",
+              },
+              {
+                property: "allegianceFilter",
+                name: "To",
+              },
+              {
+                name: "How",
+                getModel: (category) => {
+                  let how = [];
+                  category.email && how.push('email');
+                  category.site && how.push('site');
+                  category.mobile && how.push('mobile');
+                  category.sound && how.push('sound');
+                  category.vibrate && how.push('vibrate');
+                  return how.join('+');
+                },
+              },
+            ],
+            actions: [
+              {
+                name: "Edit",
+                handler: this.startEditingCategory_.bind(this),
+              },
+            ],
+          };
+        },
 
-      computeIcons_: function(category) {
-        let howIcons = [];
-        category.email && howIcons.push({name: 'Email', icon: 'communication:email'});
-        category.site && howIcons.push({name: 'Site', icon: 'icons:announcement'});
-        category.mobile && howIcons.push({name: 'Mobile', icon: 'hardware:smartphone'});
-        category.sound && howIcons.push({name: 'Mobile Sound', icon: 'av:volume-up'});
-        category.vibrate && howIcons.push({name: 'Mobile Vibrate', icon: 'notification:vibration'});
-        return howIcons;
-      },
+        computeIcons_: function (category) {
+          let howIcons = [];
+          category.email && howIcons.push({ name: 'Email', icon: 'communication:email' });
+          category.site && howIcons.push({ name: 'Site', icon: 'icons:announcement' });
+          category.mobile && howIcons.push({ name: 'Mobile', icon: 'hardware:smartphone' });
+          category.sound && howIcons.push({ name: 'Mobile Sound', icon: 'av:volume-up' });
+          category.vibrate && howIcons.push({ name: 'Mobile Vibrate', icon: 'notification:vibration' });
+          return howIcons;
+        },
 
-      makeFormBlueprint_: function() {
-        return {
-          fields: [
-            {
-              property: "sendTime",
-              type: "timestamp",
-              label: "Points",
-              name: 'send-time',
-              width: "half",
-              description: "When to send this notification. Enter now or a past time to send immediately.",
-            },
-            {
-              property: "groupId",
-              name: "recievers-group",
-              width: "half",
-              type: "group",
-              description: "Who to send this message to.",
-            },
-            {
-              property: "site",
-              label: "Site",
-              name: "send-web",
-              width: "fourth",
-              type: 'boolean',
-              description: "Whether to send to all website windows.",
-            },
-            {
-              property: "mobile",
-              label: "Mobile",
-              name: 'send-mobile',
-              width: "fourth",
-              type: 'boolean',
-              description: "Whether to send to all Android and iOS devices.",
-            },
-            {
-              property: "sound",
-              label: "Sound",
-              name: "play-sound",
-              width: "fourth",
-              required: false,
-              description: "Android/iOS only: which sound to play, example 'transmission.wav'.",
-            },
-            {
-              property: "vibrate",
-              label: "Vibrate",
-              name: "vibrate",
-              width: "fourth",
-              type: 'boolean',
-              description: "Android/iOS only: whether to vibrate.",
-            },
-            {
-              property: "destination",
-              label: "Destination",
-              name: "destination",
-              description: "When clicked, will go to this url. Leave blank to open this notification fullscreen. This is mutually exclusive with Full Message",
-              width: "half",
-              required: false,
-            },
-            {
-              property: "icon",
-              label: "Icon",
-              name: "icon",
-              description: "Polymer icon code of icon to show. Leave blank for default icon.",
-              width: "half",
-              required: false,
-            },
-            {
-              property: "previewMessage",
-              label: "Title",
-              name: "preview-message",
-              description: "The title of the message.",
-            },
-            {
-              property: "message",
-              label: "Full Message",
-              name: "detailed-message",
-              type: 'text',
-              description: "The full message text that the user sees when they click on the notification. This is mutually exclusive with Destination",
-              required: false,
-            },
-          ],
-        };
-      },
+        makeFormBlueprint_: function () {
+          return {
+            fields: [
+              {
+                property: "sendTime",
+                type: "timestamp",
+                label: "Points",
+                name: 'send-time',
+                width: "half",
+                description: "When to send this notification. Enter now or a past time to send immediately.",
+              },
+              {
+                property: "groupId",
+                name: "recievers-group",
+                width: "half",
+                type: "group",
+                description: "Who to send this message to.",
+              },
+              {
+                property: "site",
+                label: "Site",
+                name: "send-web",
+                width: "fourth",
+                type: 'boolean',
+                description: "Whether to send to all website windows.",
+              },
+              {
+                property: "mobile",
+                label: "Mobile",
+                name: 'send-mobile',
+                width: "fourth",
+                type: 'boolean',
+                description: "Whether to send to all Android and iOS devices.",
+              },
+              {
+                property: "sound",
+                label: "Sound",
+                name: "play-sound",
+                width: "fourth",
+                required: false,
+                description: "Android/iOS only: which sound to play, example 'transmission.wav'.",
+              },
+              {
+                property: "vibrate",
+                label: "Vibrate",
+                name: "vibrate",
+                width: "fourth",
+                type: 'boolean',
+                description: "Android/iOS only: whether to vibrate.",
+              },
+              {
+                property: "destination",
+                label: "Destination",
+                name: "destination",
+                description: "When clicked, will go to this url. Leave blank to open this notification fullscreen. This is mutually exclusive with Full Message",
+                width: "half",
+                required: false,
+              },
+              {
+                property: "icon",
+                label: "Icon",
+                name: "icon",
+                description: "Polymer icon code of icon to show. Leave blank for default icon.",
+                width: "half",
+                required: false,
+              },
+              {
+                property: "previewMessage",
+                label: "Title",
+                name: "preview-message",
+                description: "The title of the message.",
+              },
+              {
+                property: "message",
+                label: "Full Message",
+                name: "detailed-message",
+                type: 'text',
+                description: "The full message text that the user sees when they click on the notification. This is mutually exclusive with Destination",
+                required: false,
+              },
+            ],
+          };
+        },
 
-      startAddingCategory_: function() {
-        this.$.form.openForAdding({
-              sendTime: Math.floor(new Date().getTime()),
-            })
+        startAddingCategory_: function () {
+          this.$.form.openForAdding({
+            sendTime: Math.floor(new Date().getTime()),
+          })
             .then((properties) => {
               this.bridge.queueNotification({
                 gameId: this.game.id,
@@ -187,10 +187,10 @@
                 vibrate: properties.vibrate,
               });
             });
-      },
+        },
 
-      startEditingCategory_: function([queuedNotification]) {
-        this.$.form.openForEditing(queuedNotification)
+        startEditingCategory_: function ([queuedNotification]) {
+          this.$.form.openForEditing(queuedNotification)
             .then((newProperties) => {
               this.bridge.updateQueuedNotification({
                 gameId: this.game.id,
@@ -209,64 +209,61 @@
                 vibrate: newProperties.vibrate,
               });
             });
-      },
+        },
 
-      formatTime_: function(time) {
-        return Utils.formatTime(time);
-      },
+        formatTime_: function (time) {
+          return Utils.formatTime(time);
+        },
+      });
     });
-  });
-</script>
-<style>
-  .row {
-    display: table-row;
-  }
-  .cell {
-    display: table-cell;
-    padding: 4px 12px;
-  }
-  .icons {
-    white-space: nowrap;
-  }
-  iron-icon {
-    opacity: .75;
-  }
-</style>
-<template>
-  <paper-icon-button id="add" icon="icons:add" on-tap="startAddingCategory_">
-  </paper-icon-button>
+  </script>
+  <style>
+    .row {
+      display: table-row;
+    }
 
-  <ghvz-table
-      id="table"
-      blueprint="[[makeTableBlueprint_()]]"
-      items="[[game.queuedNotifications]]">
-    <template is="dom-repeat" id="repeater" items="[[game.queuedNotifications]]" as="category" initial-count="1" target-framerate="5">
-      <div class="row" name$="row-[[category.previewMessage]]">
-        <ghvz-table-control-cell item="[[category]]"></ghvz-table-control-cell>
-        <div class="cell">[[category.previewMessage]]</div>
-        <div class="cell">[[formatTime_(category.sendTime)]]</div>
-        <div class="cell">
-          <ghvz-group-name-label game="[[game]]" group-id="[[category.groupId]]"></ghvz-group-name-label>
-          <ghvz-player-label game="[[game]]" player-id="[[category.playerId]]"></ghvz-player-label>
-        </div>
-        <div class="cell icons">
-          <template is="dom-repeat" items="[[computeIcons_(category, category.*)]]" as="icon">
-            <span>
-              <iron-icon icon="[[icon.icon]]"></iron-icon>
-              <paper-tooltip>[[icon.name]]</paper-tooltip>
-            </span>
-          </template>
-        </div>
-      </div>
-    </template>
-  </ghvz-table>
+    .cell {
+      display: table-cell;
+      padding: 4px 12px;
+    }
 
-  <ghvz-super-form
-      id="form"
-      game="[[game]]"
-      type-name="Notification Category"
-      is-mobile="[[isMobile]]"
+    .icons {
+      white-space: nowrap;
+    }
+
+    :host iron-icon {
+      opacity: .75;
+    }
+  </style>
+  <template>
+    <paper-icon-button id="add" icon="icons:add" on-tap="startAddingCategory_">
+    </paper-icon-button>
+
+    <ghvz-table id="table" blueprint="[[makeTableBlueprint_()]]" items="[[game.queuedNotifications]]">
+      <template is="dom-repeat" id="repeater" items="[[game.queuedNotifications]]" as="category" initial-count="1"
+        target-framerate="5">
+        <div class="row" name$="row-[[category.previewMessage]]">
+          <ghvz-table-control-cell item="[[category]]"></ghvz-table-control-cell>
+          <div class="cell">[[category.previewMessage]]</div>
+          <div class="cell">[[formatTime_(category.sendTime)]]</div>
+          <div class="cell">
+            <ghvz-group-name-label game="[[game]]" group-id="[[category.groupId]]"></ghvz-group-name-label>
+            <ghvz-player-label game="[[game]]" player-id="[[category.playerId]]"></ghvz-player-label>
+          </div>
+          <div class="cell icons">
+            <template is="dom-repeat" items="[[computeIcons_(category, category.*)]]" as="icon">
+              <span>
+                <iron-icon icon="[[icon.icon]]"></iron-icon>
+                <paper-tooltip>[[icon.name]]</paper-tooltip>
+              </span>
+            </template>
+          </div>
+        </div>
+      </template>
+    </ghvz-table>
+
+    <ghvz-super-form id="form" game="[[game]]" type-name="Notification Category" is-mobile="[[isMobile]]"
       blueprint="[[makeFormBlueprint_()]]">
-  </ghvz-super-form>
-</template>
+    </ghvz-super-form>
+  </template>
 </dom-module>
