--- a/web/src/profile/dialog-give-reward.html
+++ b/web/src/profile/dialog-give-reward.html
@@ -88,7 +88,7 @@
       color: var(--admin_color_text_on_primary_background);
     }
 
-    #title {
+    :host #title {
       margin-top: 0;
       color: var(--admin_color_text_on_primary_background);
       background-color: var(--admin_color_primary);
@@ -97,7 +97,7 @@
       font-weight: bold;
     }
 
-    .contents {
+    :host .contents {
       flex-grow: 1;
       margin-top: 0px;
       padding-top: 16px;
