--- a/web/src/rewards/rewards.html
+++ b/web/src/rewards/rewards.html
@@ -25,26 +25,53 @@
 
         properties: {
           bridge: Object,
-
           game: Object,
-
+          isAdmin: Boolean,
           isMobile: Boolean,
-
-          currentRewardCategory: {
-            type: Object,
-          },
+          rewardList: Array,
+          editHandler: Object,
         },
 
-        attached: function() {
+        observers: [
+          'isStillAdmin_(isAdmin)',
+          'getRewardList_(bridge, game)',
+        ],
+
+        attached: function () {
+          let self = this;
           this.fire('ghvz-add-toolbar-button', { button: this.$.add });
+          this.editHandler = {
+            fn: function (reward) {
+              self.openEditDialog_(reward);
+            }
+          }
         },
 
-        makeCategoriesTableBlueprint_: function() {
+        getRewardList_() {
+          let self = this;
+          let callback = function (serverRewardList) {
+            self.set('rewardList', serverRewardList);
+          }
+          this.bridge.listenToRewardList(this.game.id, callback);
+        },
+
+        isStillAdmin_() {
+          if (this.isAdmin) {
+            return;
+          }
+          Utils.navigateToDashboard(this);
+        },
+
+        makeRewardTableBlueprint_: function () {
           return {
-            itemsRepeater: this.$.categoriesRepeater,
+            itemsRepeater: this.$.rewardRepeater,
             columns: [
               {
-                property: "name",
+                property: "imageUrl",
+                name: "Image",
+              },
+              {
+                property: "longName",
                 name: "Name",
               },
               {
@@ -78,7 +105,7 @@
           };
         },
 
-        makeCategoryFormBlueprint_: function() {
+        makeCategoryFormBlueprint_: function () {
           return {
             fields: [
               {
@@ -122,51 +149,10 @@
           };
         },
 
-        startAddingCategory_: function() {
-          this.$.categoryForm.openForAdding()
-              .then((properties) => {
-                this.bridge.addRewardCategory(Utils.merge(properties, {
-                    rewardCategoryId: this.bridge.newRewardCategoryId(),
-                    gameId: this.game.id
-                }));
-              });
-        },
-
-        startEditingCategory_: function([category]) {
-          this.$.categoryForm.openForEditing(category)
-              .then((newProperties) => {
-                this.bridge.updateRewardCategory(Utils.merge(newProperties, {
-                    gameId: this.game.id,
-                    rewardCategoryId: category.id,
-                }));
-              });
-        },
-
-        makeRewardsTableBlueprint_: function() {
-          return {
-            itemsRepeater: this.$.rewardsRepeater,
-            columns: [
-              {
-                property: "code",
-                name: "Code",
-                sortable: true,
-                filterable: true,
-              },
-              {
-                property: "claimer",
-                name: "Claimer",
-                sortable: true,
-                filterable: true,
-                getModel: (reward) => this.computePlayerName_(reward),
-              },
-            ],
-            actions: [
-              {
-                action: "delete",
-                name: "Delete"
-              },
-            ]
-          };
+        openEditDialog_(reward) {
+          if (reward) {
+            this.$.editRewardDialog.openForEdit(reward);
+          }
         },
 
         addRewards_() {
@@ -188,7 +174,7 @@
         },
 
         computeNumClaimed_(category) {
-          return category.rewards.filter((reward) => reward.playerId != null).length;
+          return 0//category.rewards.filter((reward) => reward.playerId != null).length;
         },
 
         showRewardsDialog_(category) {
@@ -212,115 +198,104 @@
         padding: 0;
       }
     }
+
     .row {
       display: table-row;
     }
+
     .cell {
       display: table-cell;
       padding: 4px 12px;
     }
+
     #rewards {
       margin-top: 16px;
     }
+
     #rewardCodeInput {
       flex: 1;
       margin: 0 8px;
     }
+
     #addReward {
       margin: 8px;
       white-space: nowrap;
     }
+
     #newReward {
       display: flex;
     }
+
     #addRewardContainer {
       display: flex;
       align-items: flex-end;
     }
+
     #codesDialogContents {
       max-height: 400px;
       overflow-y: auto;
     }
   </style>
   <template>
-    <array-selector
-        id="selector"
-        items="[[game.rewardCategories]]"
-        selected="{{currentRewardCategory}}">
-    </array-selector>
-
-    <paper-icon-button id="add" icon="icons:add" on-tap="startAddingCategory_">
+    <paper-icon-button id="add" icon="icons:add" on-tap="createReward_">
     </paper-icon-button>
 
-    <paper-dialog modal id="codesDialog">
+    <!-- <paper-dialog modal id="codesDialog">
       <paper-textarea id="codesDialogContents"></paper-textarea>
       <div class="buttons">
         <paper-button dialog-dismiss name="done">Done</paper-button>
       </div>
-    </paper-dialog>
+    </paper-dialog> -->
 
-    <ghvz-table
-        id="categoriesTable"
-        blueprint="[[makeCategoriesTableBlueprint_()]]"
-        items="[[game.rewardCategories]]">
-      <template is="dom-repeat" id="categoriesRepeater" items="[[game.rewardCategories]]" as="category" initial-count="1" target-framerate="5">
-        <div class="row" name$="row-[[category.shortName]]">
-          <ghvz-table-control-cell item="[[category]]"></ghvz-table-control-cell>
-          <div class="cell">[[category.name]]</div>
-          <div class="cell">[[category.points]]</div>
-          <div class="cell">[[category.shortName]]</div>
-          <div class="cell">[[computeNumClaimed_(category)]] / [[category.rewards.length]]</div>
-        </div>
-      </template>
-    </ghvz-table>
+    <template is="dom-repeat" id="rewardTable" items="[[rewardList]]" as="reward" initial-count="1"
+      target-framerate="5">
+      <ghvz-reward-item bridge="[[bridge]]" game="[[game]]" reward="[[reward]]" edit-handler="[[editHandler]]"
+        reward-to-edit="{{rewardToEdit}}">
+      </ghvz-reward-item>
+    </template>
 
-    <ghvz-super-form
-        id="categoryForm"
-        type-name="Reward Category"
-        is-mobile="[[isMobile]]"
-        blueprint="[[makeCategoryFormBlueprint_()]]">
+
+    <!-- 
+    <ghvz-super-form id="categoryForm" type-name="Reward" is-mobile="[[isMobile]]"
+      blueprint="[[makeCategoryFormBlueprint_()]]">
     </ghvz-super-form>
 
     <div id="rewards" hidden="[[!currentRewardCategory]]">
       <div id="newReward">
-        <paper-input
-            id="rewardCodeInput"
-            type="number"
-            label="Num rewards to generate"
-            value="{{numNewRewards}}">
+        <paper-input id="rewardCodeInput" type="number" label="Num rewards to generate" value="{{numNewRewards}}">
         </paper-input>
         <div id="addRewardContainer">
-          <paper-button
-              id="addReward"
-              raised
-              disabled="[[!numNewRewards]]"
-              on-tap="addRewards_">
+          <paper-button id="addReward" raised disabled="[[!numNewRewards]]" on-tap="addRewards_">
             Add Rewards
           </paper-button>
         </div>
       </div>
 
       <div id="claimers">
-        <template is="dom-repeat" id="rewardsRepeater" items="[[currentRewardCategory.rewards]]" as="reward" initial-count="1" target-framerate="5" filter="filterClaimedRewards_">
+        <template is="dom-repeat" id="rewardsRepeater" items="[[currentRewardCategory.rewards]]" as="reward"
+          initial-count="1" target-framerate="5" filter="filterClaimedRewards_">
           <div class="claimer">
             <ghvz-player-label game="[[game]]" player-id="[[reward.playerId]]"></ghvz-player-label>
           </div>
         </template>
-      </div>
-
-      <ghvz-table
-          id="rewardsTable"
-          blueprint="[[makeRewardsTableBlueprint_()]]"
-          items="[[currentRewardCategory.rewards]]">
-        <template is="dom-repeat" id="rewardsRepeater" items="[[currentRewardCategory.rewards]]" as="reward" initial-count="1" target-framerate="5">
+      </div> -->
+    <!-- 
+      <ghvz-table id="rewardsTable" blueprint="[[makeRewardsTableBlueprint_()]]"
+        items="[[currentRewardCategory.rewards]]">
+        <template is="dom-repeat" id="rewardsRepeater" items="[[currentRewardCategory.rewards]]" as="reward"
+          initial-count="1" target-framerate="5">
           <div class="row" name$="row-[[reward.code]]">
             <ghvz-table-control-cell item="[[reward]]"></ghvz-table-control-cell>
             <div class="cell" name$="reward-name-[[index]]" val="[[reward.code]]">[[reward.code]]</div>
             <div class="cell">[[computePlayerName_(reward)]]</div>
           </div>
         </template>
-      </ghvz-table>
-
+      </ghvz-table> -->
     </div>
+
+    <ghvz-admin-reward-dialog id="createRewardDialog" bridge="[[bridge]]" game="[[game]]">
+    </ghvz-admin-reward-dialog>
+    <ghvz-admin-reward-dialog id="editRewardDialog" bridge="[[bridge]]" game="[[game]]">
+    </ghvz-admin-reward-dialog>
   </template>
 </dom-module>
