--- a/web/src/ui/table/auto-table.html
+++ b/web/src/ui/table/auto-table.html
@@ -51,7 +51,7 @@
 
           items: {
             type: Array,
-            value: function() { return []; },
+            value: function () { return []; },
           },
 
           sortingColumns: {
@@ -74,7 +74,7 @@
           'resetRepeaterFilter_(globalFilter, columns)',
         ],
 
-        attached: function() {
+        attached: function () {
           this.getItemId = this.blueprint.getItemId;
 
           this.globalFilter = this.blueprint.globalFilter || null;
@@ -142,11 +142,11 @@
         //   }
         // },
 
-        computeHasControlCell_: function(selectable, numActions) {
+        computeHasControlCell_: function (selectable, numActions) {
           return selectable || numActions;
         },
 
-        getModel_: function(item, columnIndex) {
+        getModel_: function (item, columnIndex) {
           let column = this.columns[columnIndex];
           if (column.getModel) {
             let result = column.getModel(item, column.property);
@@ -160,7 +160,7 @@
           }
         },
 
-        getView_: function(item, columnIndex) {
+        getView_: function (item, columnIndex) {
           let model = this.getModel_(item, columnIndex);
 
           let column = this.columns[columnIndex];
@@ -174,11 +174,11 @@
           }
         },
 
-        getItemId_: function(item) {
+        getItemId_: function (item) {
           return this.getItemId(item);
         },
 
-        onBulkActionTapped_: function(e) {
+        onBulkActionTapped_: function (e) {
           var matchingItems = [];
           var rows = this.$.tbody.querySelectorAll('tr');
           for (var i = 0; i < rows.length; i++) {
@@ -191,13 +191,13 @@
           }
         },
 
-        onActionTapped_: function(e) {
+        onActionTapped_: function (e) {
           let action = e.model.action;
           let item = e.model.dataHost.item;
           action.handler(item);
         },
 
-        computeSortIcon_: function(sorting, ascending) {
+        computeSortIcon_: function (sorting, ascending) {
           if (!sorting) {
             return "icons:swap-vert";
           } else {
@@ -205,7 +205,7 @@
           }
         },
 
-        onSortButtonTapped_: function(e) {
+        onSortButtonTapped_: function (e) {
           const columnIndex = e.currentTarget.dataset.columnIndex;
           const column = this.columns[columnIndex];
           const sortingPath = 'columns.' + columnIndex + '.sorting';
@@ -226,10 +226,10 @@
             this.sortingColumns.push(column);
           }
           this.$.itemsRepeater.sort =
-              this.sortingColumns.length ? this.sort_.bind(this) : null;
+            this.sortingColumns.length ? this.sort_.bind(this) : null;
         },
 
-        sort_: function(a, b) {
+        sort_: function (a, b) {
           for (const column of this.sortingColumns) {
             if (column.comparator) {
               const diff = column.comparator(a, b);
@@ -246,7 +246,7 @@
           return 0;
         },
 
-        onFilterButtonTapped_: function(e) {
+        onFilterButtonTapped_: function (e) {
           const columnIndex = e.currentTarget.dataset.columnIndex;
           const column = this.columns[columnIndex];
           const filteringPath = 'columns.' + columnIndex + '.filtering';
@@ -261,14 +261,14 @@
           this.resetRepeaterFilter_();
         },
 
-        resetRepeaterFilter_: function() {
+        resetRepeaterFilter_: function () {
           const anyFiltering =
-              this.globalFilter || !!this.columns.filter(c => c.filtering).length;
+            this.globalFilter || !!this.columns.filter(c => c.filtering).length;
           this.$.itemsRepeater.filter =
-              anyFiltering ? this.filter_.bind(this) : null;
+            anyFiltering ? this.filter_.bind(this) : null;
         },
 
-        filter_: function(item) {
+        filter_: function (item) {
           if (this.globalFilter) {
             if (!this.globalFilter(item)) {
               return false;
@@ -291,11 +291,11 @@
           return true;
         },
 
-        filterKeyUp_: function() {
+        filterKeyUp_: function () {
           this.$.itemsRepeater.render();
         },
 
-        getItemForId_: function(id) {
+        getItemForId_: function (id) {
           for (var i = 0; i < this.items.length; i++) {
             if (this.getItemId(this.items[i]) == id) {
               return this.items[i];
@@ -304,7 +304,7 @@
           console.error('Item not found for id:', id);
         },
 
-        getIndexForId_: function(id) {
+        getIndexForId_: function (id) {
           for (var i = 0; i < this.items.length; i++) {
             if (this.getItemId(this.items[i]) == id) {
               return i;
@@ -313,7 +313,7 @@
           console.error('Item index not found for id:', id);
         },
 
-        onSelectChanged_: function(e) {
+        onSelectChanged_: function (e) {
           var row = e.target.closest('tr');
           this.updateColor_(row, e.target.checked);
 
@@ -322,25 +322,25 @@
           }
         },
 
-        onSelectAllChanged_: function(e) {
+        onSelectAllChanged_: function (e) {
           var rows = this.$.tbody.querySelectorAll('tr');
           for (var i = 0; i < rows.length; i++) {
             this.setSelected_(i, e.target.checked);
           }
         },
 
-        getSelected_: function(index) {
+        getSelected_: function (index) {
           var row = this.$.tbody.querySelectorAll('tr')[index];
           return row.querySelector('paper-checkbox').checked;
         },
 
-        setSelected_: function(index, selected) {
+        setSelected_: function (index, selected) {
           var row = this.$.tbody.querySelectorAll('tr')[index];
           row.querySelector('paper-checkbox').checked = selected;
           this.updateColor_(row, selected);
         },
 
-        updateColor_: function(row, selected) {
+        updateColor_: function (row, selected) {
           if (selected)
             row.dataset.selected = "selected";
           else
@@ -355,6 +355,7 @@
         display: block;
         overflow-x: auto;
       }
+
       #table {
         border-spacing: 0;
         font-size: 13pt;
@@ -364,66 +365,84 @@
         width: 100%;
         border-bottom: 1px solid #C0C0C0;
       }
+
       thead {
         background-color: #F0F0F0;
       }
+
       th {
         font-size: 12pt;
         font-weight: bold;
         text-align: left;
       }
+
       .property-header {
         color: rgba(0, 0, 0, .54);
       }
+
       tbody td {
         border-top: 1px solid #d8d8d8;
         border-bottom: 1px solid #f0f0f0;
       }
+
       th {
         border-bottom: 1px solid #f0f0f0;
       }
-      th, td {
+
+      th,
+      td {
         padding: 0 8px;
         min-height: 40px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
       }
+
       td {
         @apply(--ghvz-auto-table-td);
       }
+
       .control-cell {
         padding: 0 0 0 8px;
       }
+
       .control-cell paper-menu-button {
         padding: 0;
       }
+
       tr[data-selected] {
         background-color: rgba(0, 0, 0, .1);
       }
+
       tr[data-selected] td {
         border-bottom: 1px solid #d8d8d8;
       }
+
       ghvz-echo {
         display: flex;
         min-height: 40px;
         align-items: center;
       }
+
       .column-header {
         min-height: 40px;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
-        position: relative; /* for filter-input's absolute to grab width from */
+        position: relative;
+        /* for filter-input's absolute to grab width from */
       }
+
       .column-header-top {
         display: flex;
       }
+
       .column-name {
         order: 1;
         margin-right: 4px;
       }
+
       .sort-button {
         flex-shrink: 0;
         order: 2;
@@ -431,6 +450,7 @@
         height: 24px;
         padding: 0px;
       }
+
       .filter-button {
         flex-shrink: 0;
         order: 3;
@@ -438,9 +458,12 @@
         height: 24px;
         padding: 0px;
       }
+
       .column-header-bottom {
-        height: 28px; /* enough room for filter-input */
+        height: 28px;
+        /* enough room for filter-input */
       }
+
       .filter-input {
         position: absolute;
         bottom: 0;
@@ -448,11 +471,13 @@
         right: 0;
         height: 28px;
       }
+
       .action-menu-button {
         padding: 0;
         width: 24px;
         height: 24px;
       }
+
       .select-checkbox {
         --paper-checkbox-label: {
           padding: 0;
@@ -471,7 +496,8 @@
                 <paper-icon-button icon="menu" class="action-menu-button dropdown-trigger"></paper-icon-button>
                 <paper-menu class="dropdown-content">
                   <template is="dom-repeat" items="[[actions]]" as="action">
-                    <paper-item on-tap="onBulkActionTapped_" data-action$="[[action.action]]">[[action.name]]</paper-item>
+                    <paper-item on-tap="onBulkActionTapped_" data-action$="[[action.action]]">[[action.name]]
+                    </paper-item>
                   </template>
                 </paper-menu>
               </paper-menu-button>
@@ -485,29 +511,20 @@
                     [[column.name]]
                   </div>
                   <template is="dom-if" if="[[column.sortable]]">
-                    <paper-icon-button
-                        class="sort-button"
-                        icon="[[computeSortIcon_(column.sorting, column.ascending)]]"
-                        data-column-index$="[[column.index]]"
-                        on-tap="onSortButtonTapped_">
+                    <paper-icon-button class="sort-button" icon="[[computeSortIcon_(column.sorting, column.ascending)]]"
+                      data-column-index$="[[column.index]]" on-tap="onSortButtonTapped_">
                     </paper-icon-button>
                   </template>
                   <template is="dom-if" if="[[column.filterable]]">
-                    <paper-icon-button
-                        class="filter-button"
-                        icon="icons:search"
-                        data-column-index$="[[column.index]]"
-                        on-tap="onFilterButtonTapped_">
+                    <paper-icon-button class="filter-button" icon="icons:search" data-column-index$="[[column.index]]"
+                      on-tap="onFilterButtonTapped_">
                     </paper-icon-button>
                   </template>
                 </div>
                 <template is="dom-if" if="[[column.filtering]]">
                   <div class="column-header-bottom">
-                    <paper-input
-                        no-label-float
-                        class="filter-input"
-                        on-keyup="filterKeyUp_"
-                        value={{column.filterText}}></paper-input>
+                    <paper-input no-label-float class="filter-input" on-keyup="filterKeyUp_"
+                      value={{column.filterText}}></paper-input>
                   </div>
                 </template>
               </div>
@@ -521,10 +538,8 @@
             <template is="dom-if" if="[[computeHasControlCell_(selectable, actions.length)]]">
               <td class="control-cell">
                 <template is="dom-if" if="[[selectable]]">
-                  <paper-checkbox
-                      class="select-checkbox"
-                      data-item-id$="[[getItemId_(item, delegate)]]"
-                      on-change="onSelectChanged_">
+                  <paper-checkbox class="select-checkbox" data-item-id$="[[getItemId_(item, delegate)]]"
+                    on-change="onSelectChanged_">
                   </paper-checkbox>
                 </template>
                 <template is="dom-if" if="[[actions.length]]">
@@ -543,8 +558,7 @@
             </template>
             <template is="dom-repeat" items="[[columns]]" as="column">
               <td>
-                <ghvz-echo
-                    value="[[getView_(item, column.index, item.*)]]">
+                <ghvz-echo value="[[getView_(item, column.index, item.*)]]">
                 </ghvz-echo>
               </td>
             </template>
